#62 - cleaned up HttpForward and HttpResponse and fixed regression bug